all i need to do is fix social in top nav and footer alignment

--- a/sass/_mediaQ.scss
+++ b/sass/_mediaQ.scss
@@ -10,7 +10,7 @@
 @media (max-width: 1034px) {
 	.menu{
 		@include span-columns (12);
-		height: 15vh;
+		height: 30px;
 		background: white;
 		position: fixed;
 		top:0;
@@ -21,8 +21,9 @@
 	ul.menu{
 	text-align: left;
 	@include shift (0);
-	padding-top: 2%;
-	height: 11vh;
+	//padding-top: 2%;
+	padding: 10px 0 0 0;
+	height: 80px;
 	}
 	ul.menu li{
 		display: inline-block;
@@ -41,7 +42,7 @@
 	@include span-columns (2);
 	@include shift (9.5);
 	height: 5vh;
-	padding: 20px 0 0 0; 
+	padding: 15px 0 0 0; 
 	background: white;
 	position: fixed;
 	top:0;
@@ -172,15 +173,13 @@
 	}
 	.skill-set img{
 		visibility: hidden;
+		height: 260px;
 	}
 	.skill-set_content{
 		top: 9%;
 		bottom: 0;
 	}
-	.technology p{
-	display:none;
-	visibility: hidden;
-	}
+
 	.portfolio-link{
 		left: 0;
 	}
@@ -192,4 +191,10 @@
 		font-size: 0.8em;
 	}
 
+}
+@media (max-width: 350px) {
+	.technology p{
+		display:none;
+		visibility: hidden;
+	}
 }
