--- a/sass/style.scss
+++ b/sass/style.scss
@@ -325,6 +325,7 @@ padding: 1% 3%;
 }
 .skill-set img{
 	width: 100%;
+	background-color: #f9f9f9;
 }
 
 .skill-set_content {
@@ -350,8 +351,7 @@ padding: 1% 3%;
 		background-color:$yellow;
 		border: 3px solid $lightgrey;
 		a{
-			//color: white;
-			//color: $blue;
+			color: black;
 		}
 	}
 }
